--- a/public/style.css
+++ b/public/style.css
@@ -9,16 +9,13 @@ body {
   margin: 0;
   min-height: 100vh;
   display: flex;
-  flex-direction: column; /* Changed to column to stack elements vertically */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: background-color 0.5s ease;
   /* overflow: hidden; */
   color: #fff;
-}
-
-#defaultCanvas0{
-  background-color:#000;
+  background-color: #000; /* ADD THIS LINE: Ensure the entire body background is black */
 }
 
 #container {
